# reactpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  install-dependencies.ps1  run-tests.ps1  run-tests.sh  vcpkg.json
.cursor/: memory.md  test-commands.md
docs/: Impl.MD  README.MD
examples/counter/: main.cpp
examples/simple/: main.cpp
examples/todo/: main.cpp
include/reactcpp/: ReactCPP.hpp
include/reactcpp/context/: Context.hpp  ContextManager.hpp  ContextProvider.hpp
include/reactcpp/core/: Component.hpp  ComponentInstance.hpp  FiberNode.hpp  Props.hpp  Reconciler.hpp  VNode.hpp
include/reactcpp/elements/: Button.hpp  Input.hpp  Text.hpp  View.hpp
include/reactcpp/events/: EventDispatcher.hpp  EventManager.hpp  SyntheticEvent.hpp
include/reactcpp/hooks/: HookManager.hpp  useCallback.hpp  useContext.hpp  useEffect.hpp  useMemo.hpp  useReducer.hpp  useRef.hpp  useState.hpp
include/reactcpp/platform/: Platform.hpp
include/reactcpp/renderer/: LayoutEngine.hpp  RenderTree.hpp  SDL2Renderer.hpp  StyleResolver.hpp
include/reactcpp/scheduler/: UpdateScheduler.hpp  WorkLoop.hpp
include/reactpp/: ReactPP.hpp
include/reactpp/context/: Context.hpp  ContextManager.hpp  ContextProvider.hpp
include/reactpp/core/: Component.hpp  ComponentInstance.hpp  FiberNode.hpp  Props.hpp  Reconciler.hpp  VNode.hpp
include/reactpp/elements/: Button.hpp  Elements.hpp  Input.hpp  PropsBuilder.hpp  Text.hpp  View.hpp
include/reactpp/events/: EventDispatcher.hpp  EventManager.hpp  SyntheticEvent.hpp
include/reactpp/hooks/: HookManager.hpp  useCallback.hpp  useContext.hpp  useEffect.hpp  useMemo.hpp  useReducer.hpp  useRef.hpp  useState.hpp
include/reactpp/platform/: Platform.hpp
include/reactpp/renderer/: DrawingHelpers.hpp  FramebufferRenderer.hpp  LayoutEngine.hpp  RenderTree.hpp  RendererTypes.hpp  SDL2Renderer.hpp  StyleResolver.hpp
include/reactpp/scheduler/: UpdateScheduler.hpp  WorkLoop.hpp
src/context/: Context.cpp  ContextManager.cpp  ContextProvider.cpp
src/core/: Component.cpp  ComponentInstance.cpp  FiberNode.cpp  Props.cpp  Reconciler.cpp  VNode.cpp
src/events/: EventDispatcher.cpp  EventManager.cpp  SyntheticEvent.cpp
src/hooks/: HookManager.cpp  useCallback.cpp  useContext.cpp  useEffect.cpp  useMemo.cpp  useReducer.cpp  useRef.cpp  useState.cpp
src/platform/: Platform.cpp
src/renderer/: FramebufferRenderer.cpp  LayoutEngine.cpp  RenderTree.cpp  SDL2Renderer.cpp  StyleResolver.cpp
src/scheduler/: UpdateScheduler.cpp  WorkLoop.cpp
tests/context/: test_context.cpp
tests/core/: test_component.cpp  test_fiber.cpp  test_props.cpp  test_reconciler.cpp  test_vnode.cpp
tests/events/: test_event_dispatcher.cpp  test_event_manager.cpp  test_synthetic_events.cpp
tests/hooks/: test_hook_rules.cpp  test_useCallback.cpp  test_useEffect.cpp  test_useMemo.cpp  test_useReducer.cpp  test_useRef.cpp  test_useState.cpp
tests/renderer/: test_layout.cpp  test_render_tree.cpp  test_style_resolver.cpp
tests/scheduler/: test_scheduler.cpp
